syntax = "proto3";

package pb;

import "google/api/annotations.proto";

message RouteRequest {
    string from = 1;
    string to = 2;
    string time = 3;
}

message RouteResponse {
    string summary = 1;
    int64 station_travelled = 2;
    repeated string route = 3;
    string travel_time = 4;
    string instruction = 5;
    string query_time = 6;
}

service RouteService {
    rpc GetRoute(RouteRequest) returns (RouteResponse) {
        option (google.api.http) = {
            get: "/route"
        };
    }
}